src/test_compilateur/tst/ok/do_while.c
int main()
{
  int count;
  count=42;
  int i;
  i=0;
  do
    i=i+1;
  while(i<count);
}
