src/test_compilateur/tst/error/do_while__wrong2.c
int main()
{
  int count = 42;
  int i = 0;
  do
    i=i+1;
  while i<count ;
}
